--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -52,8 +52,9 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_name_profile" />
 
-    <TextView
-        android:id="@+id/tv_premium_days_profile"
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_membership_profile"
+        style="@style/Widget.AppCompat.Button.Borderless"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -62,7 +63,7 @@
         android:fontFamily="@font/vazir_medium"
         android:gravity="center"
         android:padding="8dp"
-        android:text="۱۶ روز اشتراک باقی مانده"
+        android:text="خرید اشتراک"
         android:textColor="@color/white"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@id/iv_blur_profile"
@@ -91,7 +92,7 @@
         android:paddingStart="16dp"
         android:paddingEnd="16dp"
         android:stateListAnimator="@null"
-        app:layout_constraintTop_toBottomOf="@id/tv_premium_days_profile" />
+        app:layout_constraintTop_toBottomOf="@id/btn_membership_profile" />
 
     <TextView
         android:layout_width="wrap_content"
