--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -25,7 +25,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:fontFamily="@font/vazir_bold"
-        android:text="سلام دکتر جعفری"
+        android:text=""
         android:textColor="@color/navyBlue"
         android:textSize="20sp"
         app:layout_constraintEnd_toStartOf="@id/civ_user_home"
@@ -42,6 +42,13 @@
         app:layout_constraintBottom_toBottomOf="@id/civ_user_home"
         app:layout_constraintEnd_toEndOf="@+id/tv_header_home" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_home_blog"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_date_home" />
+
     <TextView
         android:id="@+id/tv_today_header_home"
         android:layout_width="wrap_content"
@@ -53,14 +60,14 @@
         android:textColor="@color/navyBlue"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/civ_user_home" />
+        app:layout_constraintTop_toBottomOf="@id/rv_home_blog" />
 
     <RelativeLayout
         android:id="@+id/rl_today_home"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="84dp"
         android:background="@drawable/bg_tv_home"
         android:paddingTop="12dp"
